<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/enterMessage"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendMessage"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterMessage" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/sendMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enterMessage" />

    <TextView
        android:id="@+id/messages"
        android:layout_width="419dp"
        android:layout_height="470dp"
        android:layout_marginBottom="23dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/enterMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chatName"
        android:layout_width="162dp"
        android:layout_height="0dp"
        android:layout_marginEnd="17dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messages" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="16dp"
        android:text="@string/disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chatName"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>